# tensor

./: CMakeLists.txt  README.md  build.sh
include/: CodeGen.hpp  Combinatorics.hpp  IndexTuple.hpp  Permutation.hpp  Symmetry.hpp  Utility.hpp  codegen.hpp
release/: CMakeCache.txt  Makefile  cmake_install.cmake  codegen  test
release/tensor/: tensor.hpp
src/: Symmetry.cpp  codegen.cpp  main.cpp  test.cpp
src/codegen/: main.cpp
src/test/: main.cpp
